stylesheet.less
/* ... */
h4 {
	font-family:@font-swatch4-font-family; 
	font-weight: @font-swatch4-font-weight; 
	color:@font-swatch4-color; 
	line-height:@font-swatch4-line-height; 
	letter-spacing: @font-swatch4-letter-spacing; 
	font-size: @font-swatch4-font-size;
	a {
		font-family:@font-swatch4-font-family; 
		font-weight: @font-swatch4-font-weight; 
		line-height:@font-swatch4-line-height; 
		letter-spacing: @font-swatch4-letter-spacing; 
		font-size: @font-swatch4-font-size;
	}
}

h5 {
	font-family:@font-swatch5-font-family;
	font-weight: @font-swatch5-font-weight;
	color:@font-swatch5-color;
	line-height:@font-swatch5-line-height;
	letter-spacing: @font-swatch5-letter-spacing;
	font-size: @font-swatch5-font-size;
	a {
		font-family:@font-swatch5-font-family;
		font-weight: @font-swatch5-font-weight;
		line-height:@font-swatch5-line-height;
		letter-spacing: @font-swatch5-letter-spacing;
		font-size: @font-swatch5-font-size;
	}
}

h6 {
	font-family:@font-swatch6-font-family;
	font-weight: @font-swatch6-font-weight;
	color:@font-swatch5-color;
	line-height:@font-swatch6-line-height;
	letter-spacing: @font-swatch6-letter-spacing;
	font-size: @font-swatch6-font-size;
	a {
		font-family:@font-swatch6-font-family;
		font-weight: @font-swatch6-font-weight;
		line-height:@font-swatch6-line-height;
		letter-spacing: @font-swatch6-letter-spacing;
		font-size: @font-swatch6-font-size;		
	}
}

p,
.contactform label,
.twitter ul li a,
.signupform label {
	font-family:@font-swatch5-font-family;
	font-weight: @font-swatch5-font-weight;
	color:@font-swatch5-color;
	line-height:@font-swatch5-line-height;
	letter-spacing: @font-swatch5-letter-spacing;
	font-size: @font-swatch5-font-size;
}

blockquote {
	font-style: italic;
	font-size: bkscale(@font-swatch5-font-size, 1.2);
	line-height: bkscale(@font-swatch5-line-height, 1.2);
	background-color: lighten(@color-swatch1, 10%);
	border-radius: 3px;
	&:before {
		left: 8px;
		color: @color-swatch3;
	}
}

a, .widget.twitter ul li a {
	color: @color-swatch3;
	&:hover {
		color: darken(@color-swatch3, 10%);
		text-decoration: none;
	}
}

.widget.twitter ul li div > span {
	font-size: .8em;
	a {
		font-size: inherit;
		text-decoration: none;
	}
}

.main-wrap {
	background-color: @color-swatch1;
	float: left;
	margin-left: 25%;
	width: 75%;
}

.template-header,
.main,
.template-footer {
	clear: both;
	padding: 0 20px;
	> * {
		max-width: 1040px;
	}
}

.main {
	padding: 15px 30px;
}

hr.line {
	background-color: lighten(@color-swatch5, 75%)
}

// 2. Header
.template-header {
	position: relative;
	color: @color-swatch1;
	position: relative;
	float: left;
	width: 100%;
	background-color: @color-swatch7;
	.widget.logo {
		text-align: center;
	}
}

.template-phone {
	float: left;
	text-align: right;
	width: 30%;
	padding: 10px 25px 11px;
	h2 {
		font-family:@font-swatch6-font-family;
		font-weight: @font-swatch6-font-weight;
		color:@font-swatch6-color;
		line-height:@font-swatch6-line-height;
		letter-spacing: @font-swatch6-letter-spacing;
		font-size: @font-swatch6-font-size;
		padding-bottom: 0;
	}
}

.header-main {
	padding: 20px 0px;
}

.header-sub {
	background-color: @color-swatch7;
	float: left;
	width: 100%;
}

.template-feature {
	position: fixed;
	height: 100%;
	width: 25%;
	.widget.feature {
		height: 100%;
	}
}

.template-aside, .widget.logo {
	float: left;
	.bk-content-text {
		display: inline;
	}
}

.feature-btn {
	display: block;
}

.widget.feature .feature-bgimg .content button.btn {
	background-color: lighten(@color-swatch2, 10%);
	&:hover {
		background-color: darken(@color-swatch2, 10%);
	}
}

.header-feature {
	position: relative;
	overflow: hidden;
	height: 300px;
	h2 span, h3 span {
		background: @color-swatch7;
		padding: 5px 14px;
	}
}
.widget.feature h2 {
	padding-bottom: 0;
}
.widget.feature .feature-bgimg .content h3 {
	display: inline-block;
	text-indent: @font-swatch9-letter-spacing;
	padding-top: 10px;
}

.widget.feature .feature-bgimg .content {
	display: block;
	padding: 75px 20px 0 20px;
	margin: 0 auto;
}

// 3. Navigation
.nav {
	font-family: 'Oswald', sans-serif;
	position: relative;
	ul {
		display: block;
		width: 100%;
		padding: 0;
		margin: 0;
		list-style: none;
		border-bottom: 1px solid darken(@color-swatch1, 10%);
	}
	li {
		display: inline-block;
	}
	a {
		padding: 20px 25px;
		display: inline-block;
	}
}

.template-nav {
	float: left;
	width: 70%;
	min-height: 49px;
}

.widget .extendednavigation ul {
	margin: 0 auto;
	float: none;
	li {
		float: none;
		text-align: center;
		display: inline-block;
		a, > .text {
			padding: 8px 10px 11px;
			font-family:@font-swatch6-font-family;
			font-weight: @font-swatch6-font-weight;
			color:@font-swatch6-color;
			line-height:@font-swatch6-line-height;
			letter-spacing: @font-swatch6-letter-spacing;
			font-size: @font-swatch6-font-size;
			&:hover {
				color:@color-swatch4;
			}
		}
	}
	li.folder {
		margin-right: 0;
		padding-right: 10px;
		.text:hover {
			color:@color-swatch4;
		}
	}
	li.folder:after {
		right: 8px;
		top: 43%;
		border-top-color: @font-swatch6-color;
	}
	li.folder:hover {
		ul {
			min-width: 150px;
			background-color: @color-swatch7;
			left: 0;
		}
		&:after {
			border-top-color: @color-swatch4;
		}
	}
}

.widget .extendednavigation a.pull {
	width: 30px;
	height: 30px;
	top: 10px;
	right: 18px;
	&:after {
		background-color: @color-swatch2;
		box-shadow: 0 6px 0 @color-swatch2, 0 12px 0 @color-swatch2;
		left: 4px;
		top: 7px;
		width: 22px;
	}
}
/* ... */

